# flink-cookbook

./: .gitignore  README.md  service.yml
change-data-capture/: README.md  pom.xml
compiled-plan/: README.md  pom.xml
continuous-file-reading/: README.md  pom.xml
datetime-management/: README.md
pyflink/: README.md  pyproject.toml  requirements.txt
pyflink/00_setting_the_environment/: download_jars.py  recipe_01_setting_up_the_environment.py  recipe_02_using_catalogs_and_databases.py  recipe_03_adding_jar_to_path.py
pyflink/01_core_operations/: recipe_01_creating_tables.py  recipe_02_essential_transformations.py  recipe_03_aggregating_data.py  recipe_04_deduplication.py
pyflink/02_udfs/: recipe_05_scalar_udfs.py  recipe_06_table_udfs.py  recipe_07_aggregate_udfs.py  recipe_08_custom_deserialization.py  recipe_09_flattening_nested_json.py  recipe_10_pii_data_masking.py  recipe_11_data_validation_quarantine.py  recipe_12_sentiment_analysis_categorization.py
pyflink/03_windowing/: recipe_14_tumbling_windows.py  recipe_15_sliding_windows.py  recipe_16_session_windows.py
pyflink/04_joins/: recipe_17_relational_joins.py  recipe_18_interval_joins.py  recipe_19_temporal_joins.py
pyflink/05_connectors_and_io/: README.md  README_filesystem_recipe.md  README_json_recipe.md  README_s3_parquet_recipe.md  generate_json_data.py  pyproject.toml  recipe_21_kafka_connector.py  recipe_22_filesystem_connector.py  recipe_23_s3_parquet_connector.py  setup_json_recipe.py  setup_s3_parquet_recipe.py
pyflink/05_connectors_and_io/recipe_20_read_kafka_protobuf/: README.md  generate_proto_data.py  pyproject.toml  recipe_20_read_protobuf.py  setup_jars.py  setup_proto.py  start_kafka.bat  start_kafka.sh
pyflink/05_connectors_and_io/recipe_20_read_kafka_protobuf/proto_data/: transaction.proto  transaction_pb2.py
pyflink/06_general_recipes/recipe_24_deduplicated_join/: README.md  recipe_24_deduplicated_join.py
pyflink/tools/: download_jars.py  start_kafka.py
(+163 files in other folders)
