[project]
name = "pyflink-cookbook"
version = "0.1.0"
description = "PyFlink Table API Cookbook Recipes"
authors = [
    {name = "Confluent", email = "amatheson@confluent.io"}
]
dependencies = [
    "apache-flink>=1.18.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "confluent-kafka>=2.0.0",
    "grpcio-tools>=1.50.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "**/*.py",
    "**/*.md",
    "**/*.txt",
    "**/*.yml",
    "**/*.yaml",
    "**/*.json"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 