[project]
name = "pyflink-json-recipe"
version = "0.1.0"
description = "PyFlink JSON Kafka Recipe"
authors = [
    {name = "Confluent", email = "amatheson@confluent.io"}
]
dependencies = [
    "apache-flink>=1.18.0",
    "confluent-kafka>=2.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
] 